add some more functionality to /auth

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 PORT=3000
 JWT_SECRET=supersecretstring
 DATABASE_URL="postgresql://xxx:yyy@host:5432/postgres?schema=public"
+SESSION_SECRET=supersecretstring
