--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "prisma": "^4.7.1",
@@ -23,6 +24,7 @@
     "@prisma/client": "^4.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   }
